appId: com.tdrevans.nexttrain
---
- openLink: "nexttrain://nearby"
- extendedWaitUntil:
    visible: "Menu"
    timeout: 60000
- tapOn: "Menu"
- assertVisible: "Done"
- tapOn: "Reminders"
- assertVisible: "time to leave"
- assertNotVisible: "Upcoming"
- assertVisible: "Done"
